--- a/src/app/modules/catalog/catalog/catalog.component.html
+++ b/src/app/modules/catalog/catalog/catalog.component.html
@@ -1,14 +1,22 @@
 <p>catalog works!</p>
 
+<select name="categories" id="categories">
+  <option *ngFor="let category of categories$ | async">
+    {{ category.name }}
+  </option>
+</select>
+
+<hr />
 <table>
-    <tr>
-      <th>Product Name</th>
-      <th>Product Description</th>
-      <th>Price</th>
-    </tr>
-    <tr *ngFor="let item of catalogItems$ | async">
-      <td>{{ item.name }}</td>
-      <td>{{ item.description }}</td>
-      <td>{{ item.price }}</td>
-    </tr>
-  </table>
+  <tr>
+    <th>Product Name</th>
+    <th>Product Description</th>
+    <th>Price</th>
+  </tr>
+  <tr *ngFor="let item of catalogItems$ | async">
+    <td>{{ item.name }}</td>
+    <td>{{ item.description }}</td>
+    <td>{{ item.price }}</td>
+    <td> <button (click)="addToCart(item)">Add item to Cart</button></td>
+  </tr>
+</table>
